# AgenticAIEngineering

./: .gitignore
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
1_foundations/me/: domus-revita.txt  summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: research_manager.py
3_crew/coder_2/: README.md  pyproject.toml
3_crew/engineering_team_2/: pyproject.toml
3_crew/engineering_team_2/output/: accounts.py  accounts.py_desingn.md  app.py  test_accounts.py
3_crew/engineering_team_2/src/engineering_team_2/: crew.py  main.py
3_crew/engineering_team_2/src/engineering_team_2/config/: agents.yaml  tasks.yaml
3_crew/stock_picker_2/: README.md  pyproject.toml
3_crew/stock_picker_2/src/stock_picker_2/: crew.py  main.py
3_crew/stock_picker_2/src/stock_picker_2/config/: agents.yaml  tasks.yaml
3_crew/stock_picker_2/src/stock_picker_2/tools/: push_tool.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py  memory.db-shm  memory.db-wal  sidekick.py  sidekick_tools.py
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  agent.py
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb  accounts.py  date_server.py  package-lock.json  package.json  playwright_mcp_server.py  playwright_mcp_wrapper.sh
guides/: 09_ai_apis_and_ollama.ipynb
trainig/: test1.py
training/: test1.py  test2.py  test3.py  test4.py  test5.py  test5_upgraded.py
(+35 files in other folders)
