[project]
name = "engineering_team_2"
version = "0.1.0"
description = "engineering_team_2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.193.2,<1.0.0",
    "gradio>=5.22.0"
]

[project.scripts]
engineering_team_2 = "engineering_team_2.main:run"
run_crew = "engineering_team_2.main:run"
train = "engineering_team_2.main:train"
replay = "engineering_team_2.main:replay"
test = "engineering_team_2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

