[project]
name = "stock_picker_2"
version = "0.1.0"
description = "stock_picker_2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0"
]

[project.scripts]
stock_picker_2 = "stock_picker_2.main:run"
run_crew = "stock_picker_2.main:run"
train = "stock_picker_2.main:train"
replay = "stock_picker_2.main:replay"
test = "stock_picker_2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
